# lightweight-charts

./: IMPLEMENTATION_CHECKLIST.md  README.md
backend/: Cargo.toml
backend/src/: auth.rs  db.rs  main.rs
backend/src/indicator/: compiler.rs  mod.rs
backend/src/optimizer/: genome.rs
backend/src/routes/: health.rs  market.rs  trading.rs
backend/src/trading/: mod.rs  signals.rs
backend/src/ws/: binance_listener.rs
frontend/: app.js
frontend/src/components/: ChartPanel.jsx
frontend/src/services/: api.js
